--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "maxDuration": 30
     }
   },
-  "buildCommand": "pnpm run build",
-  "installCommand": "pnpm install",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "outputDirectory": ".next",
   "framework": "nextjs",
   "headers": [
