--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     }
   },
   "buildCommand": "npm run build",
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps",
   "outputDirectory": ".next",
   "framework": "nextjs",
   "headers": [
