--- a/package.json
+++ b/package.json
@@ -45,13 +45,15 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "discord.js": "^14.14.1",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.9.1",
+    "graphql": "^16.10.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "openai": "^4.29.2",
+    "openai": "^4.96.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -64,6 +66,8 @@
     "twilio": "^4.23.0",
     "twilio-client": "^1.15.1",
     "vaul": "^0.9.6",
+    "weaviate-ts-client": "^2.2.0",
+    "ws": "^8.18.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
